fix button alignment

--- a/www/aMessage/main.css
+++ b/www/aMessage/main.css
@@ -83,7 +83,7 @@ html, body {
 }
 
 #buttons { 
-    align-self: flex-start;
+    align-self: flex-end;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
